# TaskReminder

./: .gitignore  TaskReminder.postman_collection.json  pyproject.toml
backend/: manage.py
backend/apps/auth/: urls.py
backend/apps/courses/: models.py  serializers.py  urls.py  views.py
backend/apps/courses/migrations/: 0001_initial.py
backend/apps/programs/: models.py  serializers.py  urls.py  views.py
backend/apps/programs/migrations/: 0001_initial.py
backend/apps/tasks/: models.py  serializers.py  urls.py  views.py
backend/apps/tasks/migrations/: 0001_initial.py
backend/apps/temps/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/temps/migrations/: 0001_initial.py  0002_rename_tempcourse_tempcoursemodel.py
backend/apps/universities/: models.py  serializers.py  urls.py  views.py
backend/apps/universities/migrations/: 0001_initial.py  0002_alter_universitymodel_name.py
backend/apps/users/: managers.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/configs/: settings.py  urls.py
backend/configs/extra_conf/: rest_conf.py
